--- a/carrinho.html
+++ b/carrinho.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini E-commerce</title>
+    <title>Carrinho de Compras</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
     <!-- Barra de Navegação -->
@@ -35,26 +33,25 @@
 
     </nav>
 
-
-    <!-- Tela Inicial -->
-    <header class="hero">
-        <h1>Bem-vindo ao Mini E-commerce</h1>
-        <p>Compre os melhores produtos ao melhor preço!</p>
-        <a href="produtos.html" class="btn">Ver Produtos</a>
-    </header>
-
+    <!-- Conteúdo do Carrinho -->
+    <div id="carrinho">
+        <h1>Carrinho de Compras</h1>
+        <ul id="listaCarrinho"></ul>
+        <p id="total">Total: R$ 0.00</p>
+        <button onclick="finalizarCompra()">Finalizar Compra</button>
+        <button onclick="removerTodosItens()">Remover Todos</button>
+    </div>
 
     <div class="card text-center position-fixed bottom-0 start-50 translate-middle-x w-100">
         <div class="card-header">
-            Featured
+          Featured
         </div>
         <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
         </div>
-    </div>
+      </div>
 
     <script src="script.js"></script>
 </body>
-
 </html>
