--- a/produtos.html
+++ b/produtos.html
@@ -42,6 +42,7 @@
     </div>
 
     <!-- Galeria de Produtos -->
+     <img src="https://static.netshoes.com.br/produtos/chuteira-futsal-umbro-pro-5-bump-unissex/38/2IA-2818-038/2IA-2818-038_zoom1.jpg?ts=1695565782" classs="img-thumbnail" alt="px100;">
     <div class="container" id="produtosContainer">
         <div class="produto" data-nome="Produto 1">
             <img src="https://via.placeholder.com/250" alt="Produto 1">
