--- a/produtos.html
+++ b/produtos.html
@@ -52,14 +52,14 @@
             <button id="btn-produto-1" class="btn btn-primary" onclick="adicionarAoCarrinho('Produto 1', 50, 1)">Adicionar ao Carrinho</button>
         </div>
         <div class="produto" data-nome="Produto 2">
-            <img src="https://via.placeholder.com/250" alt="Produto 2">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-_tdcPIJseLsbL0D27Veb54uP-6oCHHwXWw&s" alt="Produto 2">
             <h2>Produto 2</h2>
             <p>Preço: R$ 100,00</p>
             <p id="estoque-produto-2">Estoque: 3</p>
             <button id="btn-produto-2" class="btn btn-primary" onclick="adicionarAoCarrinho('Produto 2', 100, 2)">Adicionar ao Carrinho</button>
         </div>
         <div class="produto" data-nome="Produto 3">
-            <img src="https://via.placeholder.com/250" alt="Produto 3">
+            <img src="https://images.yampi.me/assets/stores/maniadefutsal/uploads/images/joelheira-mania-de-futsal-pro-branca-5bb2185188340-medium.jpg" alt="Produto 3">
             <h2>Produto 3</h2>
             <p>Preço: R$ 150,00</p>
             <p id="estoque-produto-3">Estoque: 2</p>
@@ -67,7 +67,7 @@
         </div>
 
         <div class="produto" data-nome="Produto 4">
-            <img src="https://via.placeholder.com/250" alt="Produto 3">
+            <img src="https://a-static.mlcdn.com.br/450x450/par-de-caneleira-p-futebol-futsal-society-adulto-protetor-de-canela-futebol-vps/lojamerabe/317-2/b9b6918f3dc1539e5b157fce6d919b65.jpeg" alt="Produto 3">
             <h2>Produto 4</h2>
             <p>Preço: R$ 150,00</p>
             <p id="estoque-produto-4">Estoque: 2</p>
@@ -83,7 +83,7 @@
         </div>
 
         <div class="produto" data-nome="Produto 6">
-            <img src="https://via.placeholder.com/250" alt="Produto 3">
+            <img src="https://i.pinimg.com/originals/24/2e/7e/242e7e76b6dd08319fb461c934200a7d.jpg" alt="Produto 3">
             <h2>Produto 6</h2>
             <p>Preço: R$ 150,00</p>
             <p id="estoque-produto-6">Estoque: 2</p>
