--- a/produtos.html
+++ b/produtos.html
@@ -75,9 +75,9 @@
         </div>
 
         <div class="produto" data-nome="Produto 5">
-            <img src="https://via.placeholder.com/250" alt="Produto 3">
+            <img src="https://imgs.casasbahia.com.br/1560936959/1xg.jpg" alt="Produto 3">
             <h2>Produto 5</h2>
-            <p>Preço: R$ 150,00</p>
+            <p>Preço: R$ 95,00</p>
             <p id="estoque-produto-5">Estoque: 2</p>
             <button id="btn-produto-5" class="btn btn-primary" onclick="adicionarAoCarrinho('Produto 5', 155, 5)">Adicionar ao Carrinho</button>
         </div>
