--- a/produtos.html
+++ b/produtos.html
@@ -83,7 +83,7 @@
         </div>
 
         <div class="produto" data-nome="Produto 6">
-            <img src="https://i.pinimg.com/originals/24/2e/7e/242e7e76b6dd08319fb461c934200a7d.jpg" alt="Produto 3">
+            <img src="https://www.pistaecampo.com.br/media/catalog/product/cache/8707f1ee35bea7704420a99b1b71b952/b/o/bola_penalty_rx500_preta_1.jpg" alt="Produto 3">
             <h2>Produto 6</h2>
             <p>Preço: R$ 150,00</p>
             <p id="estoque-produto-6">Estoque: 2</p>
