--- a/produtos.html
+++ b/produtos.html
@@ -45,7 +45,7 @@
     
     <div class="container" id="produtosContainer">
         <div class="produto" data-nome="Produto 1">
-            <img src="https://static.netshoes.com.br/produtos/chuteira-futsal-umbro-pro-5-bump-unissex/38/2IA-2818-038/2IA-2818-038_zoom1.jpg?ts=1695565782" alt="Produto 1">
+            <img src="https://eldorado.hubsell.com.br/media/catalog/product/4/7/4739206_chuteira-if1395-37-2_1.png" alt="Produto 1">
             <h2>Produto 1</h2>
             <p>Preço: R$ 50,00</p>
             <p id="estoque-produto-1">Estoque: 5</p>
