--- a/produtos.html
+++ b/produtos.html
@@ -46,37 +46,37 @@
     <div class="container" id="produtosContainer">
         <div class="produto" data-nome="Produto 1">
             <img src="https://eldorado.hubsell.com.br/media/catalog/product/4/7/4739206_chuteira-if1395-37-2_1.png" alt="Produto 1">
-            <h2>Produto 1</h2>
-            <p>Preço: R$ 50,00</p>
+            <h2>chuteira da adidas</h2>
+            <p>Preço: R$ 150,00</p>
             <p id="estoque-produto-1">Estoque: 5</p>
             <button id="btn-produto-1" class="btn btn-primary" onclick="adicionarAoCarrinho('Produto 1', 50, 1)">Adicionar ao Carrinho</button>
         </div>
         <div class="produto" data-nome="Produto 2">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-_tdcPIJseLsbL0D27Veb54uP-6oCHHwXWw&s" alt="Produto 2">
-            <h2>Produto 2</h2>
-            <p>Preço: R$ 100,00</p>
+            <h2>chuteira da puma do ney</h2>
+            <p>Preço: R$ 200,00</p>
             <p id="estoque-produto-2">Estoque: 3</p>
             <button id="btn-produto-2" class="btn btn-primary" onclick="adicionarAoCarrinho('Produto 2', 100, 2)">Adicionar ao Carrinho</button>
         </div>
         <div class="produto" data-nome="Produto 3">
             <img src="https://images.yampi.me/assets/stores/maniadefutsal/uploads/images/joelheira-mania-de-futsal-pro-branca-5bb2185188340-medium.jpg" alt="Produto 3">
-            <h2>Produto 3</h2>
-            <p>Preço: R$ 150,00</p>
+            <h2>joelheira</h2>
+            <p>Preço: R$ 60,00</p>
             <p id="estoque-produto-3">Estoque: 2</p>
             <button id="btn-produto-3" class="btn btn-primary" onclick="adicionarAoCarrinho('Produto 3', 150, 3)">Adicionar ao Carrinho</button>
         </div>
 
         <div class="produto" data-nome="Produto 4">
             <img src="https://a-static.mlcdn.com.br/450x450/par-de-caneleira-p-futebol-futsal-society-adulto-protetor-de-canela-futebol-vps/lojamerabe/317-2/b9b6918f3dc1539e5b157fce6d919b65.jpeg" alt="Produto 3">
-            <h2>Produto 4</h2>
-            <p>Preço: R$ 150,00</p>
+            <h2>caneleira</h2>
+            <p>Preço: R$ 30,00</p>
             <p id="estoque-produto-4">Estoque: 2</p>
             <button id="btn-produto-4" class="btn btn-primary" onclick="adicionarAoCarrinho('Produto 4', 144, 4)">Adicionar ao Carrinho</button>
         </div>
 
         <div class="produto" data-nome="Produto 5">
             <img src="https://imgs.casasbahia.com.br/1560936959/1xg.jpg" alt="Produto 3">
-            <h2>Produto 5</h2>
+            <h2>camisa termica</h2>
             <p>Preço: R$ 95,00</p>
             <p id="estoque-produto-5">Estoque: 2</p>
             <button id="btn-produto-5" class="btn btn-primary" onclick="adicionarAoCarrinho('Produto 5', 155, 5)">Adicionar ao Carrinho</button>
@@ -84,8 +84,8 @@
 
         <div class="produto" data-nome="Produto 6">
             <img src="https://www.pistaecampo.com.br/media/catalog/product/cache/8707f1ee35bea7704420a99b1b71b952/b/o/bola_penalty_rx500_preta_1.jpg" alt="Produto 3">
-            <h2>Produto 6</h2>
-            <p>Preço: R$ 150,00</p>
+            <h2>bola penalty</h2>
+            <p>Preço: R$ 140,00</p>
             <p id="estoque-produto-6">Estoque: 2</p>
             <button id="btn-produto-6" class="btn btn-primary" onclick="adicionarAoCarrinho('Produto 6', 156, 6)">Adicionar ao Carrinho</button>
         </div>
