--- a/produtos.html
+++ b/produtos.html
@@ -83,7 +83,7 @@
         </div>
 
         <div class="produto" data-nome="Produto 6">
-            <img src="https://www.pistaecampo.com.br/media/catalog/product/cache /8707f1ee35bea7704420a99b1b71b952/b/o/bola_penalty_rx500_preta_1.jpg" alt="Produto 3">
+            <img src="https://cambuci.vtexassets.com/arquivos/ids/991939/bola-society-penalty-521289-1110-1-.jpg?v=638354973899100000" alt="Produto 3">
             <h2>bola penalty</h2>
             <p>Preço: R$ 140,00</p>
             <p id="estoque-produto-6">Estoque: 2</p>
