--- a/carrinho.html
+++ b/carrinho.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="col-1">
                 <a class="navbar-brand" href="index.html">
-                    <img src="https://via.placeholder.com/250" alt="" width="30" height="24">
+                    <img src="https://static.vecteezy.com/system/resources/thumbnails/010/873/039/small_2x/illustration-of-golden-soccer-symbol-or-label-and-logo-vector.jpg" alt="" width="30" height="24">
                 </a>
             </div>
             <div class="col-11">
