--- a/produtos.html
+++ b/produtos.html
@@ -44,7 +44,7 @@
     <!-- Galeria de Produtos -->
     
     <div class="container" id="produtosContainer">
-        <div class="produto" data-nome="Produto 1">
+        <div class="produto" data-nome="chuteira da adidas">
             <img src="https://eldorado.hubsell.com.br/media/catalog/product/4/7/4739206_chuteira-if1395-37-2_1.png" alt="Produto 1">
             <h2>chuteira da adidas</h2>
             <p>Preço: R$ 150,00</p>
