--- a/produtos.html
+++ b/produtos.html
@@ -49,7 +49,7 @@
             <h2>chuteira da adidas</h2>
             <p>Preço: R$ 150,00</p>
             <p id="estoque-produto-1">Estoque: 5</p>
-            <button id="btn-produto-1" class="btn btn-primary" onclick="adicionarAoCarrinho('Produto 1', 50, 1)">Adicionar ao Carrinho</button>
+            <button id="btn-produto-1" class="btn btn-primary" onclick="adicionarAoCarrinho('chuteira da adidas', 150, 1)">Adicionar ao Carrinho</button>
         </div>
         <div class="produto" data-nome="Produto 2">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-_tdcPIJseLsbL0D27Veb54uP-6oCHHwXWw&s" alt="Produto 2">
