--- a/produtos.html
+++ b/produtos.html
@@ -56,14 +56,14 @@
             <h2>chuteira da puma do ney</h2>
             <p>Preço: R$ 200,00</p>
             <p id="estoque-produto-2">Estoque: 3</p>
-            <button id="btn-produto-2" class="btn btn-primary" onclick="adicionarAoCarrinho('Produto 2', 100, 2)">Adicionar ao Carrinho</button>
+            <button id="btn-produto-2" class="btn btn-primary" onclick="adicionarAoCarrinho('chuteira da puma do ney', 200, 2)">Adicionar ao Carrinho</button>
         </div>
         <div class="produto" data-nome="Produto 3">
             <img src="https://images.yampi.me/assets/stores/maniadefutsal/uploads/images/joelheira-mania-de-futsal-pro-branca-5bb2185188340-medium.jpg" alt="Produto 3">
             <h2>joelheira</h2>
             <p>Preço: R$ 60,00</p>
             <p id="estoque-produto-3">Estoque: 2</p>
-            <button id="btn-produto-3" class="btn btn-primary" onclick="adicionarAoCarrinho('Produto 3', 150, 3)">Adicionar ao Carrinho</button>
+            <button id="btn-produto-3" class="btn btn-primary" onclick="adicionarAoCarrinho('joelheira', 60, 3)">Adicionar ao Carrinho</button>
         </div>
 
         <div class="produto" data-nome="Produto 4">
@@ -71,7 +71,7 @@
             <h2>caneleira</h2>
             <p>Preço: R$ 30,00</p>
             <p id="estoque-produto-4">Estoque: 2</p>
-            <button id="btn-produto-4" class="btn btn-primary" onclick="adicionarAoCarrinho('Produto 4', 144, 4)">Adicionar ao Carrinho</button>
+            <button id="btn-produto-4" class="btn btn-primary" onclick="adicionarAoCarrinho('caneleira', 30, 4)">Adicionar ao Carrinho</button>
         </div>
 
         <div class="produto" data-nome="Produto 5">
@@ -79,7 +79,7 @@
             <h2>camisa termica</h2>
             <p>Preço: R$ 95,00</p>
             <p id="estoque-produto-5">Estoque: 2</p>
-            <button id="btn-produto-5" class="btn btn-primary" onclick="adicionarAoCarrinho('Produto 5', 155, 5)">Adicionar ao Carrinho</button>
+            <button id="btn-produto-5" class="btn btn-primary" onclick="adicionarAoCarrinho('camisa termica, 95, 5)">Adicionar ao Carrinho</button>
         </div>
 
         <div class="produto" data-nome="Produto 6">
@@ -87,7 +87,7 @@
             <h2>bola penalty</h2>
             <p>Preço: R$ 140,00</p>
             <p id="estoque-produto-6">Estoque: 2</p>
-            <button id="btn-produto-6" class="btn btn-primary" onclick="adicionarAoCarrinho('Produto 6', 156, 6)">Adicionar ao Carrinho</button>
+            <button id="btn-produto-6" class="btn btn-primary" onclick="adicionarAoCarrinho('bola penalty', 140, 6)">Adicionar ao Carrinho</button>
         </div>
 
         
