--- a/produtos.html
+++ b/produtos.html
@@ -79,7 +79,7 @@
             <h2>camisa termica</h2>
             <p>Preço: R$ 95,00</p>
             <p id="estoque-produto-5">Estoque: 2</p>
-            <button id="btn-produto-5" class="btn btn-primary" onclick="adicionarAoCarrinho('camisa termica, 95, 5)">Adicionar ao Carrinho</button>
+            <button id="btn-produto-5" class="btn btn-primary" onclick="adicionarAoCarrinho('camisa termica', 95, 5)">Adicionar ao Carrinho</button>
         </div>
 
         <div class="produto" data-nome="Produto 6">
