--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <!-- Tela Inicial -->
     <header class="hero">
-        <h1>Bem-vindo ao Mini E-commerce</h1>
+        <h1>Bem-vindo ao Mini esportes comercios</h1>
         <p>Compre os melhores produtos ao melhor preço!</p>
         <a href="produtos.html" class="btn">Ver Produtos</a>
     </header>
