--- a/produtos.html
+++ b/produtos.html
@@ -95,7 +95,7 @@
 
     <div class="card text-center bottom-0 start-50 translate-middle-x w-100">
         <div class="card-header">
-          
+          Featured
         </div>
         <div class="card-body">
           <h5 class="card-title">Special title treatment</h5>
