--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fbr.freepik.com%2Fvetores-gratis%2Flogotipo-de-esportes-de-futebol_2704520.htm&psig=AOvVaw2T_HrE-Dm8BkjJfulr0cch&ust=1729779995092000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCKCk9pDbpIkDFQAAAAAdAAAAABAJ" class="d-block w-100" alt="...">
+                <img src="https://mir-s3-cdn-cf.behance.net/projects/404/dc9132181606161.Y3JvcCw0ODQ4LDM3OTIsMCww.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
                 <img src="https://img.freepik.com/vetores-premium/modelo-de-loja-de-esportes-de-futebol-com-fundo-verde_1419-1914.jpg" class="d-block w-100" alt="...">
