--- a/carrinho.html
+++ b/carrinho.html
@@ -38,7 +38,7 @@
         <h1>Carrinho de Compras</h1>
         <ul id="listaCarrinho"></ul>
         <p id="total">Total: R$ 0.00</p>
-        <button onclick="finalizarCompra()">Finalizar Compra</button>
+        <button onclick="finalizarCompra()">Finalizar Compra</button>       
         <button onclick="removerTodosItens()">Remover Todos</button>
     </div>
 
@@ -55,3 +55,22 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+     <!-- modal-->
+      <div class="modal tade" ld="ExemplModalralizado" tablndex="-1" role="dialog"
+      aria-labelledby="TituloModalcentralizado" aria-hidden="true">
+         <div class="modal-dialog modal-dialog-centered" role="document">
+           <div class="modal-content">
+              <div class="modal-header">
+                 <h5 class="modas-title" id="TituloModalcentralizado">Formas de pagamento</h5>
+                   </div>
+                   <div class="modal-body">
+                
+
+                    <button type="button" class="btn btn-primary" id="pix">PIX</button>
+                    <button type="button" class="btn btn-primary" id="credito">Credito</button>
+                    <button type="button" class="btn btn-primary" id="aleo">Aleo</button>
+                   </div>
+              </div>
+         </div>
+    </div>
