--- a/carrinho.html
+++ b/carrinho.html
@@ -1,13 +1,14 @@
-
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrinho de Compras</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <!-- Barra de Navegação -->
@@ -16,7 +17,8 @@
         <div class="container">
             <div class="col-1">
                 <a class="navbar-brand" href="index.html">
-                    <img src="https://static.vecteezy.com/system/resources/thumbnails/010/873/039/small_2x/illustration-of-golden-soccer-symbol-or-label-and-logo-vector.jpg" alt="" width="62" height="57">
+                    <img src="https://static.vecteezy.com/system/resources/thumbnails/010/873/039/small_2x/illustration-of-golden-soccer-symbol-or-label-and-logo-vector.jpg"
+                        alt="" width="62" height="57">
                 </a>
             </div>
             <div class="col-11">
@@ -38,39 +40,49 @@
         <h1>Carrinho de Compras</h1>
         <ul id="listaCarrinho"></ul>
         <p id="total">Total: R$ 0.00</p>
-        <button onclick="finalizarCompra()">Finalizar Compra</button>       
+        <button onclick="finalizarCompra()">Finalizar Compra</button>
         <button onclick="removerTodosItens()">Remover Todos</button>
     </div>
 
     <div class="card text-center position-fixed bottom-0 start-50 translate-middle-x w-100">
         <div class="card-header">
-          Featured
+            Featured
         </div>
         <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
         </div>
-      </div>
+    </div>
 
-    <script src="script.js"></script>
-</body>
-</html>
+    <!-- modal-->
+    <div class="modal tade" ld="ExemplModalralizado" tablndex="-1" role="dialog"
+        aria-labelledby="TituloModalcentralizado" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modas-title" id="TituloModalcentralizado">Formas de pagamento</h5>
+                </div>
+                <div class="modal-body">
 
-     <!-- modal-->
-      <div class="modal tade" ld="ExemplModalralizado" tablndex="-1" role="dialog"
-      aria-labelledby="TituloModalcentralizado" aria-hidden="true">
-         <div class="modal-dialog modal-dialog-centered" role="document">
-           <div class="modal-content">
-              <div class="modal-header">
-                 <h5 class="modas-title" id="TituloModalcentralizado">Formas de pagamento</h5>
-                   </div>
-                   <div class="modal-body">
-                
 
                     <button type="button" class="btn btn-primary" id="pix">PIX</button>
                     <button type="button" class="btn btn-primary" id="credito">Credito</button>
                     <button type="button" class="btn btn-primary" id="aleo">Aleo</button>
-                   </div>
-              </div>
-         </div>
+                </div>
+            </div>
+        </div>
     </div>
+
+
+    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
+
+    <script src="script.js"></script>
+</body>
+
+</html>
