--- a/carrinho.html
+++ b/carrinho.html
@@ -34,12 +34,12 @@
 
     </nav>
 
-    <!-- Conteúdo do Carrinho -->
-    <div id="carrinho">
+       <!-- Conteúdo do Carrinho -->
+       <div id="carrinho">
         <h1>Carrinho de Compras</h1>
         <ul id="listaCarrinho"></ul>
         <p id="total">Total: R$ 0.00</p>
-        <button onclick="finalizarCompra()">Finalizar Compra</button>
+        <button id="finalizarCompra" onclick="finalizarCompra()" style="display: none;">Finalizar Compra</button>
         <button onclick="removerTodosItens()">Remover Todos</button>
     </div>
 
