--- a/carrinho.html
+++ b/carrinho.html
@@ -28,6 +28,14 @@
                         <a href="carrinho.html">Carrinho</a>
                         <span id="quantidadeCarrinho">0</span>
                     </li>
+                    <li>
+                        <!-- Botão para abrir o modal -->
+                        <span id="nomeUser"></span>
+                        <button type="button" class="btn btn-primary btn-sm" id="botaoLogin" data-bs-toggle="modal" data-bs-target="#loginModal">
+                            Login
+                        </button>
+                        <button type="button" class="btn btn-danger btn-sm" id="botaoSair" style="display: none;" onclick="sair()">Sair</button>
+                    </li>
                 </ul>
             </div>
         </div>
