--- a/produtos.html
+++ b/produtos.html
@@ -131,7 +131,7 @@
     
             <div class="produto" data-nome="Produto 6">
                 <img src="https://cambuci.vtexassets.com/arquivos/ids/991939/bola-society-penalty-521289-1110-1-.jpg?v=638354973899100000" alt="Produto 3">
-                <h2>bola penalty</h2>
+                <h2>pal</h2>
                 <p>Preço: R$ 140,00</p>
                 <p id="estoque-produto-6">Estoque: 2</p>
                 <button id="btn-produto-6" class="btn btn-primary" onclick="adicionarAoCarrinho('bola penalty', 140, 6)">Adicionar ao Carrinho</button>
