--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="https://mir-s3-cdn-cf.behance.net/projects/404/dc9132181606161.Y3JvcCw0ODQ4LDM3OTIsMCww.png" class="d-block w-100" alt="...">
+                <img src="https://a.allegroimg.com/s512/11167b/a9274543409cb300bafd3003437f/HAFT-DIAMENTOWY-CRISTIANO-RONALDO-CR7-35x25" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
                 <img src="https://acdn.mitiendanube.com/stores/002/322/390/themes/toluca/1-img-2103310691-1729958652-8b25a2df1c150fa2491c30d7539bfa261729958652-480-0.jpg?1992967798" class="d-block w-100" alt="...">
