--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 
     <div class="card text-center bottom-0 start-50 translate-middle-x w-100">
         <div class="card-header">
-            juan
+            ser acotence com o aplicativo ligue prar esse numero
+                              (64)99996-3241  
         </div>
         <div class="card-body">
             <h5 class="card-title">Special title treatment</h5>
