--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <div class="card text-center bottom-0 start-50 translate-middle-x w-100">
         <div class="card-header">
-            ser acotence com o aplicativo ligue prar esse numero
+            caso ouver problema entre em cotanto com esse numero
                               (64)99996-3241  
         </div>
         <div class="card-body">
