--- a/carrinho.html
+++ b/carrinho.html
@@ -53,7 +53,8 @@
 
     <div class="card text-center position-fixed bottom-0 start-50 translate-middle-x w-100">
         <div class="card-header">
-            Featured
+            caso ouver problema entre em cotanto com esse numero
+                              (64)99996-3241
         </div>
         <div class="card-body">
             <h5 class="card-title">Special title treatment</h5>
