--- a/carrinho.html
+++ b/carrinho.html
@@ -60,7 +60,7 @@
 
     <div class="card text-center position-fixed bottom-0 start-50 translate-middle-x w-100">
         <div class="card-header">
-            entre em caso de erro ligue para o contato abaixo
+            CASO OCORRA ERRO LIGUE PARA O NÙMERO ABAIXO
         </div>
         <div class="card-body">
             <h5 class="card-title">
