--- a/carrinho.html
+++ b/carrinho.html
@@ -58,7 +58,7 @@
         <button onclick="removerTodosItens()">Remover Todos</button>
     </div>
 
-    <div class="card text-center position-fixed bottom-0 start-50 translate-middle-x w-100">
+    <div class="card text-center bottom-0 start-50 translate-middle-x w-100">
         <div class="card-header">
             CASO OCORRA ERRO LIGUE PARA O NÙMERO ABAIXO
         </div>
