--- a/produtos.html
+++ b/produtos.html
@@ -47,6 +47,11 @@
     <div class="search-bar">
         <input type="text" id="searchInput" class="form-control" placeholder="Pesquisar produtos..." oninput="filtrarProdutos()">
     </div>
+
+    <div class="input-group flex-nowrap">
+        <span class="input-group-text" id="addon-wrapping">@</span>
+        <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
+    </div>
           
     <!-- Galeria de Produtos -->
     
