--- a/produtos.html
+++ b/produtos.html
@@ -49,7 +49,7 @@
     </div>
 
     <div class="input-group flex-nowrap">
-        <span class="input-group-text" id="addon-wrapping">@</span>
+        <span class="input-group-text" id="addon-wrapping"><i class="bi bi-search"></i></span>
         <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
     </div>
           
