--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <img src="https://acdn.mitiendanube.com/stores/002/322/390/themes/toluca/1-img-2103310691-1729958652-8b25a2df1c150fa2491c30d7539bfa261729958652-480-0.jpg?1992967798" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjzw_7gH5Qu4-qV0CY1SYrdXIj7ANUKAp7lzMWZGdNVCVHeJPzMwqHtWWN-8dXz4bvqYQX2-9MWZ8PADpPib7aNJSgk8TsuRFS50w2QzrpkCKnEeCGcZVdCQAy4kIFvJXkf_EKBbrneEU4/s640/Sony-exp%25C3%25B5e-a-Ta%25C3%25A7a-da-Copa-do-Mundo-em-S%25C3%25A3o-Paulo.jpg" class="d-block w-100" alt="...">
+                <img src="https://dbdzm869oupei.cloudfront.net/img/blinds/preview/39052.png" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
